# comet

./: CMakeLists.txt  README.md  build.sh
src/: comet.cpp  comet.h  config.h.in
